# projeto_cpp_apis

./: .gitignore  CMakeLists.txt
include/common/: Request.hpp  Response.hpp
scripts/: build.sh  run_sync.sh
src/async_server/: CMakeLists.txt
src/common/: Request.cpp  Response.cpp
src/sync_server/: CMakeLists.txt  SyncServer.cpp  SyncServer.hpp  main.cpp
